# ml_mobility_ns3

./: .gitignore  Makefile  README.md  analyze_results.py  create_project_structure.sh  example.py  generate.py  generate_cpp_project.py  generate_fake_data.py  pyproject.toml  remember.sh  requirements.txt  run_experiments.sh  run_experiments2.sh  run_experiments3.sh  run_experiments_test.sh  setup.py  test.py  train.py
configs/: config.yaml
configs/data/: netmob25.yaml
configs/export/: cpp.yaml
configs/model/: dummy.yaml  vae_attention.yaml  vae_cnn.yaml  vae_dense.yaml  vae_hierarchical.yaml  vae_lstm.yaml  vae_lstm_attention.yaml
configs/sweep/: basic_grid.yaml  basic_grid2.yaml  optuna.yaml
configs/training/: default.yaml  hierarchical.yaml
cpp_project/: CMakeLists.txt.jinja  main.cc.jinja  trajectory_generator.cc.jinja  trajectory_generator.h.jinja
ml_mobility_ns3/: __init__.py  preprocessing.py  preprocessing2.py
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  02_model_experiments.ipynb  03_model_analysis.ipynb  03_model_experiments.ipynb  Untitled.ipynb  Untitled1.ipynb  analysis1-Copy1.ipynb  analysis1-Copy2.ipynb  analysis1.ipynb  analysis2-Copy1.ipynb  analysis2.ipynb  analysis3-Copy1.ipynb  analysis3.ipynb  bike_sample_trajectories.html  car_sample_trajectories.html  mixed_sample_trajectories.html  public_transport_sample_trajectories.html  public_transport_trajectory_comparison.html  walking_sample_trajectories.html
scripts/: evaluate.py  export.py  list_experiments.py  preprocess.py  train.py
tests/: test_data_loader.py
(+31 files in other folders)
